# lem-in

./: CMakeLists.txt  Makefile  README.md  author  lem-in  my.map  myd.map  test  test1
includes/: lem_in.h
libft/: Makefile
libft/includes/: ft_printf.h  libft.h
libft/srcs/ft_lst/: ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlen.c  ft_lstmap.c  ft_lstnew.c  ft_lstnew_ptr.c  ft_lstpush.c
libft/srcs/ft_mem/: ft_bzero.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_uniswap.c
libft/srcs/ft_printf/: create_struct.c  find_specifier.c  ft_printf.c  get_value.c  handling_specifier.c  rounding_a.c  type_a.c  type_c.c  type_di.c  type_e.c  type_f.c  type_g.c  type_n.c  type_non.c  type_oux.c  type_p.c  type_percent.c  type_s.c
libft/srcs/ft_str/: ft_atoi.c  ft_close_file.c  ft_freesplit.c  ft_intlen.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_base.c  ft_power.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_putstrc.c  ft_range.c  ft_read_file.c  ft_sqrt.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strjoin_free.c  ft_strlcat.c  ft_strlen.c  ft_strmap.c  ft_strmapi.c  (+18 more)
maps/: 1.map  2.map  big  illegalname1  loop1  maintest_map  map1.txt  model_cornelian  my1.map  whitespaces
maps2/: map4.txt  map6.txt  test1
minilibx/: Makefile
srcs/: algo.c  ant_flow.c  bfs.c  blokway.c  combination.c  debug.c  errors.c  freelinks.c  get_map_info.c  glubina.c  main.c  patch_analysis.c  restorroom.c  rooms.c  saveway.c  superposition.c  tools.c  val_tools.c  visual.c
srcs/common/: errors.c  get_map_info.c  rooms.c  val_tools.c  val_tools2.c
srcs/lem-in/: algo.c  ant_flow.c  bfs.c  blokway.c  combination.c  debug.c  freelinks.c  main.c  patch_analysis.c  restorroom.c  saveway.c  tools.c
srcs/visu-hex/: draw_line.c  draw_map.c  key_hook.c  main.c  test.c  vis_tools.c  visual.c
